--- a/index.css
+++ b/index.css
@@ -3,3 +3,23 @@
   display: flex;
   justify-content: center;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+  margin: auto 25%;
+}
+
+form label {
+  padding-bottom: 2%;
+  font-size: 1.25em;
+}
+
+#form-container {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
