Center error message

--- a/index.css
+++ b/index.css
@@ -23,3 +23,9 @@ form label {
   justify-content: center;
   align-items: center;
 }
+
+.error {
+  margin: 2%;
+  display: flex;
+  justify-content: center;
+}
