--- a/index.css
+++ b/index.css
@@ -34,6 +34,8 @@ form label {
   margin: 2%;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .amiibo-header {
