--- a/index.css
+++ b/index.css
@@ -1,8 +1,5 @@
 .banner {
   margin: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   text-align: center;
 }
 
@@ -75,7 +72,7 @@ form label {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 3% 5%;
+  padding: 2% 2%;
   border-right: 3px dashed gray;
 }
 
@@ -92,7 +89,7 @@ img {
 .release-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin-bottom: 5%;
 }
 
@@ -109,4 +106,8 @@ h4 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+}
+
+#credit {
+  text-align: center;
 }
