--- a/index.css
+++ b/index.css
@@ -111,3 +111,46 @@ h4 {
 #credit {
   text-align: center;
 }
+
+/* Mobile Styles */
+@media only screen and (max-width: 500px) {
+  .desktop {
+    display: none;
+  }
+
+  .amiibo-info-container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .details {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .img-container {
+    border-right: none;
+    border-bottom: 3px dashed gray;
+  }
+  .release-container {
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    margin-bottom: 5%;
+  }
+
+  h3 {
+    margin: auto 2%;
+    align-self: center;
+    text-align: center;
+  }
+
+  label {
+    margin-top: 5%;
+    text-align: center;
+  }
+  
+}
